--- a/Setup/Applications/git-sync-test/Services/service2/Manifests/Index.yaml
+++ b/Setup/Applications/git-sync-test/Services/service2/Manifests/Index.yaml
@@ -4,4 +4,5 @@ helmChartConfig:
   chartName: chartmuseum
   chartVersion: 2.10.0
   connectorName: tathagat-helm-repo
+skipVersioningForAllK8sObjects: true
 storeType: HelmChartRepo
